--- a/contribute/index.html
+++ b/contribute/index.html
@@ -41,7 +41,7 @@
     <link rel="index" title="索引" href="../genindex.html" />
     <link rel="search" title="搜索" href="../search.html" />
     <link rel="next" title="Get started with development" href="setup.html" />
-    <link rel="prev" title="Accessibility" href="../user_guide/accessibility.html" />
+    <link rel="prev" title="可访问性" href="../user_guide/accessibility.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="zh_CN">
     
@@ -407,7 +407,7 @@ The content is written in a combination of reStructuredText and MyST Markdown.</
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">上一页</p>
-            <p class="prev-next-title">Accessibility</p>
+            <p class="prev-next-title">可访问性</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="setup.html" title="下一页 页">
